[package]
name = "echopointnova_mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hudhook = { version = "0.8", features = ["dx11"] }
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_ProcessSnapshotting",
] }
ctor = "0.2"
